--- a/css/style.css
+++ b/css/style.css
@@ -67,13 +67,68 @@ body{
 /* ******************************************* */
  /* --- General Component */
 /* *********************************************** */
-.heading-primary{
+.container{
+    max-width: 120rem;
+    margin: 0 auto;
+    padding:0 3.2rem;
+}
+.grid{
+    display: grid;
+    row-gap: 9.6rem;
+    column-gap:6.4rem ;
+}
+
+.grid--2--cols{
+    grid-template-columns: repeat(2,1fr);
+}
+
+.grid--3--cols{
+    grid-template-columns: repeat(3,1fr);
+}
+
+.grid--4--cols{
+    grid-template-columns: repeat(4,1fr);
+}
+
+.grid--center--v{
+    align-items: center;
+}
+
+
+.heading-primary,
+.heading-secondary,
+.heading-tertiary{
     color: #333;
     font-size: 5.2rem;
     font-weight: 700;
-    line-height: 1.1;
     letter-spacing: -0.5px;
     margin-bottom: 3.2rem;
+}
+.heading-primary{
+    font-size: 5.2rem;
+    line-height: 1.1;
+
+}
+.heading-secondary{
+    font-size: 4.4rem;
+    line-height: 1.2;
+    margin-bottom: 9.6rem;
+}
+
+.heading-tertiary{
+    font-size: 3rem;
+    line-height: 1.2;
+    margin-bottom: 3.2rem;
+}
+
+.sub-heading{
+    color: #e67e22;
+    font-size: 1.6rem;
+    font-weight: 500;
+    display: block;
+    text-transform: uppercase;
+    margin-bottom: 1.6rem;
+    letter-spacing: 0.75px;
 }
 
 .btn:link,
@@ -252,3 +307,64 @@ body{
     font-weight: 700;
 }
 /* End Hero Section */
+
+/* ******************************************* */
+ /* ---  How it work Section */
+/* *********************************************** */
+.step-number{
+    font-size: 8.6rem;
+    font-weight: 600;
+    color: #ddd;
+    margin-bottom: 1.2rem;
+}
+
+.step-description{
+    font-size: 1.8rem;
+    line-height: 1.8;
+
+}
+
+.step-img-box{
+    display: flex;
+    justify-content: center;
+    align-items: center ;
+    position: relative;
+}
+
+.step-img-box::before,
+.step-img-box::after{
+    content: '';
+    display: block;
+    
+    /* height: 100px; */
+    background-color: #fdf2e9;
+    
+    border-radius: 50%;
+    
+
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%,-50%);
+    
+}
+
+.step-img-box::before{
+    width: 60%;
+    padding-bottom:60% ;
+    z-index: -1;
+}
+.step-img-box::after{
+    width: 45%;
+    padding-bottom:45% ;
+    background-color: #fae5de;
+    z-index: -1;
+}
+
+
+.step-img{
+    width: 35%;
+}
+
+
+
