--- a/css/style.css
+++ b/css/style.css
@@ -308,6 +308,35 @@ body{
 }
 /* End Hero Section */
 
+
+/* ******************************************* */
+ /* --- Feacture In Section */
+/* *********************************************** */
+.section-feacture{
+    padding: 4.8rem 0 3.2rem 0;
+    color: #888;
+}
+.heading-feature-in{
+    font-size: 1.4rem;
+    text-transform: uppercase;
+    letter-spacing: 0.75px;
+    font-weight: 500;
+    text-align: center;
+    margin-bottom: 2.4rem;
+}
+
+.logos{
+    display: flex;
+    justify-content: space-between;
+}
+
+.logos img{
+    height: 3.2rem;
+    /* filter:grayscale(100%); */
+    opacity: 50%;
+    filter: brightness(0);
+}
+
 /* ******************************************* */
  /* ---  How it work Section */
 /* *********************************************** */
@@ -365,6 +394,9 @@ body{
 .step-img{
     width: 35%;
 }
+
+
+
 
 
 
