--- a/css/style.css
+++ b/css/style.css
@@ -43,138 +43,6 @@ heading-primary:
 
 
 
-*{
-    padding: 0;
-    margin: 0;
-    box-sizing: border-box;
-}
-
-html{
-    font-size: 63.5%;
-}
-
-body{
-    font-family: "Rubik",sans-serif;
-    font-weight: 400;
-    color: #555;
-    line-height: 1;
-
-    
-}
-
-
-
-/* ******************************************* */
- /* --- General Component */
-/* *********************************************** */
-.container{
-    max-width: 120rem;
-    margin: 0 auto;
-    padding:0 3.2rem;
-}
-.grid{
-    display: grid;
-    row-gap: 9.6rem;
-    column-gap:6.4rem ;
-}
-
-.grid--2--cols{
-    grid-template-columns: repeat(2,1fr);
-}
-
-.grid--3--cols{
-    grid-template-columns: repeat(3,1fr);
-}
-
-.grid--4--cols{
-    grid-template-columns: repeat(4,1fr);
-}
-
-.grid--center--v{
-    align-items: center;
-}
-
-
-.heading-primary,
-.heading-secondary,
-.heading-tertiary{
-    color: #333;
-    font-size: 5.2rem;
-    font-weight: 700;
-    letter-spacing: -0.5px;
-    margin-bottom: 3.2rem;
-}
-.heading-primary{
-    font-size: 5.2rem;
-    line-height: 1.1;
-
-}
-.heading-secondary{
-    font-size: 4.4rem;
-    line-height: 1.2;
-    margin-bottom: 9.6rem;
-}
-
-.heading-tertiary{
-    font-size: 3rem;
-    line-height: 1.2;
-    margin-bottom: 3.2rem;
-}
-
-.sub-heading{
-    color: #e67e22;
-    font-size: 1.6rem;
-    font-weight: 500;
-    display: block;
-    text-transform: uppercase;
-    margin-bottom: 1.6rem;
-    letter-spacing: 0.75px;
-}
-
-.btn:link,
-.btn:visited{
-    display: inline-block;
-    
-    text-decoration: none;
-    font-size: 2rem;
-    font-weight: 600;
-    padding: 1.6rem 3.2rem;
-    border-radius: 9px;
-
-    transition: background-color .3s;
-}
-.btn-right-sm{
-    margin-right: 1.6rem !important;
-}
-.btn--full:link,
-.btn--full:visited{
-    color: #fff;
-    background-color: #e67e22;
-    font-weight: 700;
-   
-   
-}
-
-.btn--outline:link,
-.btn--outline:visited{
-    background-color: #fff;
-    color: #555;
-   
-}
-
-.btn--full:hover,
-.btn--full:active{
-    background-color: #b8651b;
-}
-
-.btn--outline:hover,
-.btn--outline:active{
-    background-color: #fdf2e9;
-    /* border: inset 3px solid #fff; */
-
-    box-shadow: inset 0 0 0 3px #fff;
-}
-
 
 
 
@@ -396,7 +264,108 @@ body{
 }
 
 
+/* ******************************************* */
+ /* ---  Meals Section */
+/* *********************************************** */
+
+.section-meals{
+    padding: 9.6rem 0;
+}
+
+.meal{
+    box-shadow: 0 2.4rem 4.8rem rgba(10, 10, 10, 0.075);
+    border-radius: 11px;
+    overflow: hidden;
+
+    transition:transform .3s;
+    
+}
+
+.meal:hover{
+    transform: translateY(-1.2rem);
+}
+
+.meal-content{
+    padding:3.2rem 4.8rem 4.8rem 4.8rem;
+}
+.meal-img{
+    width: 100%;
+}
+
+.meal-title{
+    font-size: 2.4rem;
+    font-weight: 600;
+    color: #333;
+}
+
+.meal-attributes{
+    list-style-type: none;
+    display: flex;
+    flex-direction: column;
+    gap: 2rem;
+    
+}
+
+.meal-attribute{
+    font-size: 1.8rem;
+    display: flex;
+    align-items: center;
+    gap: 1.6rem;
+}
+
+.meal-icon{
+    color: #e67e22;
+    width: 2.4rem;
+    height: 2.4rem;
+
+}
+
+.tags{
+    display: flex;
+    gap: 0.4rem;
+}
 
 
 
+.tag--vegetarian{
+    background-color:#51cf66;
+}
+.tag--vegan{
+    background-color: #94d82d;
+}
 
+.tag--paleo{
+    background-color:#ffe066 ;
+}
+  
+
+
+/* ******************************************* */
+ /* ---  Diets Section */
+/* *********************************************** */
+
+.list{
+    list-style-type: none;
+    display: flex;
+    flex-direction: column;
+    gap: 1.6rem;
+}
+
+.list-icon{
+    color: #e67e22;
+    width: 3rem;
+    height: 3rem;
+    
+}
+
+.list-item{
+    font-size: 1.8rem;
+    display: flex;
+    align-items: center;
+    gap: 1.6rem;
+}
+
+.all-recipes{
+    text-align: center;
+    font-size: 1.8rem;
+}
