--- a/css/general.css
+++ b/css/general.css
@@ -181,7 +181,36 @@ strong{
 }
 
 
+/* list component */
+
+.list{
+    list-style-type: none;
+    display: flex;
+    flex-direction: column;
+    gap: 1.6rem;
+}
+
+.list-icon{
+    color: #e67e22;
+    width: 3rem;
+    height: 3rem;
+    
+}
+
+.list-item{
+    font-size: 1.8rem;
+    display: flex;
+    align-items: center;
+    gap: 1.6rem;
+}
+
+
+
+
 /* text align */
 .center-text{
     text-align: center;
 }
+
+
+
