--- a/css/style.css
+++ b/css/style.css
@@ -525,3 +525,171 @@ heading-primary:
     font-size: 1.8rem;
     line-height: 1.8;
 }
+
+
+/* ******************************************* */
+ /* ---  Call  \To  Action Section */
+/* *********************************************** */
+
+.section-cta{
+    padding: 9.6rem 0;
+
+
+}
+
+.cta{
+    display: grid;
+    grid-template-columns: 2fr 1fr;
+    background:linear-gradient(to right,#e98b38,#e67e22);
+    box-shadow: 0px 2.4rem 4.8rem rgba(0, 0, 0, 0.57);
+    
+
+
+    border-radius: 11px;
+    overflow: hidden;
+}
+
+.cta-img-box{
+    background-image: linear-gradient(to right bottom ,#e98b3860,#e67d224d),url(../img/eating.jpg);
+    background-size: cover;
+    background-position: center;
+    
+}
+
+.cta-text-box{
+    color: #2e1907;
+    padding: 3.4rem 6.4rem;
+
+}
+
+.cta .heading-secondary{
+    color: #2e1907;
+    margin-bottom:3.2rem ;
+}
+
+.cta-text{
+    font-size: 1.8rem;
+    line-height: 1.8;
+    letter-spacing: 0.75px;
+    margin-bottom: 4.8rem;
+}
+
+.cta-form{
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    column-gap:3.2rem ;
+    row-gap: 2.2rem;
+}
+
+.cta-form label{
+    display: block;
+    font-size: 1.6rem;
+    font-weight: 500;
+    margin-bottom: 1.2rem;
+}
+
+.cta-form input,
+.cta-form select{
+    width: 100%;
+    padding: 1.6rem;
+    font-size: 1.8rem;
+    font-family: inherit;
+    color: inherit;
+    border: none;
+    
+    background-color: #fdf2e9;
+    border-radius: 9px;
+    box-shadow: 0 1px 2px rgba(0,0,0,0.1);
+}
+
+.cta-form input:focus,
+.cta-form select:focus{
+    outline: 5px solid #fff;
+}
+
+.cta-form input::placeholder{
+    color: #aaa;
+}
+
+
+
+/* ******************************************* */
+ /* --- Footer Component */
+/* *********************************************** */
+.footer{
+    border-top: 1px solid #ddd;
+    padding: 3.6rem 0;
+}
+.grid--footer{
+    grid-template-columns: 1.5fr 1.5fr 1fr 1fr 1fr;
+}
+.footer-logo{
+    display: block;
+    margin-bottom: 3.2rem;
+}
+
+.footer-heading{
+    font-size: 1.8rem;
+    font-weight: 500;
+    margin-bottom: 3.2rem;
+
+}
+
+.footer-nav{
+    list-style-type: none;
+
+    display: flex;
+    flex-direction: column;
+    gap: 2.4rem;
+}
+
+.footer-link:link,
+.footer-link:visited{
+    text-decoration: none;
+    font-size: 1.6rem;
+    color: #767676;
+    transition: all .3s;
+
+}
+
+.footer-link:hover,
+.footer-link:active{
+    color: #444;
+}
+
+.social-link{
+    list-style-type: none;
+    display: flex;
+    gap: 2.4rem;
+
+    
+}
+
+.social-icon{
+    width: 2.4rem;
+    height: 2.4rem;
+}
+
+.copyright{
+    font-size: 1.4rem;
+    line-height: 1.6;
+    color: #767676;
+    margin-top: auto;
+}
+
+.logo-col{
+    display: flex;
+    flex-direction: column;
+
+}
+
+.contact{
+    font-style:normal ;
+    font-size: 1.6rem;
+    line-height: 1.6;
+
+}
+
+.address{
+    margin-bottom: 2.6rem;
+}
