--- a/css/general.css
+++ b/css/general.css
@@ -1,241 +1,291 @@
-*{
-    padding: 0;
-    margin: 0;
-    box-sizing: border-box;
+/*
+--- 01 TYPOGRAPHY SYSTEM
 
+- Font sizes (px)
+10 / 12 / 14 / 16 / 18 / 20 / 24 / 30 / 36 / 44 / 52 / 62 / 74 / 86 / 98
+
+- Font weights
+Default: 400
+Medium: 500
+Semi-bold: 600
+Bold: 700
+
+- Line heights
+Default: 1
+Small: 1.05
+Medium: 1.2
+Paragraph default: 1.6
+Large: 1.8
+
+- Letter spacing
+-0.5px
+0.75px
+
+--- 02 COLORS
+
+- Primary: #e67e22
+- Tints:
+#fdf2e9
+#fae5d3
+#eb984e
+
+- Shades: 
+#cf711f
+#45260a
+
+- Accents:
+- Greys
+
+#888
+#767676 (lightest grey allowed on #fff)
+#6f6f6f (lightest grey allowed on #fdf2e9)
+#555
+#333
+
+--- 05 SHADOWS
+
+0 2.4rem 4.8rem rgba(0, 0, 0, 0.075);
+
+--- 06 BORDER-RADIUS
+
+Default: 9px
+Medium: 11px
+
+--- 07 WHITESPACE
+
+- Spacing system (px)
+2 / 4 / 8 / 12 / 16 / 24 / 32 / 48 / 64 / 80 / 96 / 128
+*/
+
+* {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
 }
 
-*:focus{
-    outline: none;
+html {
+  /* font-size: 10px; */
+
+  /* 10px / 16px = 0.625 = 62.5% */
+  /* Percentage of user's browser font-size setting */
+  font-size: 62.5%;
+  overflow-x: hidden;
+  /* scroll-behavior: smooth; */
 }
 
-html{
-    font-size: 63.5%;
+body {
+  font-family: "Rubik", sans-serif;
+  line-height: 1;
+  font-weight: 400;
+  color: #555;
+  
+
+  /* Only works if there is nothing absolutely positioned in relation to body */
+  overflow-x: hidden;
 }
 
-body{
-    font-family: "Rubik",sans-serif;
-    font-weight: 400;
-    color: #555;
-    line-height: 1;
+/**************************/
+/* GENRAL REUSABLE COMPONENTS */
+/**************************/
 
-    
+.container {
+  /* 1140px */
+  max-width: 120rem;
+  padding: 0 3.2rem;
+  margin: 0 auto;
 }
 
+.grid {
+  display: grid;
+  column-gap: 6.4rem;
+  row-gap: 9.6rem;
 
-
-
-
-
-/* ******************************************* */
- /* --- General Component */
-/* *********************************************** */
-.container{
-    max-width: 120rem;
-    margin: 0 auto;
-    padding:0 3.2rem;
+  /* margin-bottom: 9.6rem; */
 }
 
-.grid{
-    display: grid;
-    row-gap: 9.6rem;
-    column-gap:6.4rem ;
+/* .grid:last-child {
+  margin-bottom: 0;
+} */
+
+.grid:not(:last-child) {
+  margin-bottom: 9.6rem;
 }
 
-.grid--2--cols{
-    grid-template-columns: repeat(2,1fr);
+.grid--2-cols {
+  grid-template-columns: repeat(2, 1fr);
 }
 
-.grid--3--cols{
-    grid-template-columns: repeat(3,1fr);
+.grid--3-cols {
+  grid-template-columns: repeat(3, 1fr);
 }
 
-.grid--4--cols{
-    grid-template-columns: repeat(4,1fr);
+.grid--4-cols {
+  grid-template-columns: repeat(4, 1fr);
 }
 
-.grid--center--v{
-    align-items: center;
+/* .grid--5-cols {
+  grid-template-columns: repeat(5, 1fr);
+} */
+
+.grid--center-v {
+  align-items: center;
 }
 
-.grid--5--cols{
-    grid-template-columns: repeat(5,1fr);
-}
-
-/* Heading Component */
 .heading-primary,
 .heading-secondary,
-.heading-tertiary{
-    color: #333;
-    font-size: 5.2rem;
-    font-weight: 700;
-    letter-spacing: -0.5px;
-    margin-bottom: 3.2rem;
-}
-.heading-primary{
-    font-size: 5.2rem;
-    line-height: 1.1;
-
-}
-.heading-secondary{
-    font-size: 4.4rem;
-    line-height: 1.2;
-    margin-bottom: 9.6rem;
+.heading-tertiary {
+  font-weight: 700;
+  color: #333;
+  /* color: #45260a; */
+  /* color: #343a40; */
+  letter-spacing: -0.5px;
 }
 
-.heading-tertiary{
-    font-size: 3rem;
-    line-height: 1.2;
-    margin-bottom: 3.2rem;
+.heading-primary {
+  font-size: 5.2rem;
+  line-height: 1.05;
+  margin-bottom: 3.2rem;
 }
 
-.sub-heading{
-    color: #e67e22;
-    font-size: 1.6rem;
-    font-weight: 500;
-    display: block;
-    text-transform: uppercase;
-    margin-bottom: 1.6rem;
-    letter-spacing: 0.75px;
+.heading-secondary {
+  font-size: 4.4rem;
+  line-height: 1.2;
+  margin-bottom: 9.6rem;
 }
 
+.heading-tertiary {
+  font-size: 3rem;
+  line-height: 1.2;
+  margin-bottom: 3.2rem;
+}
 
+.subheading {
+  display: block;
+  font-size: 1.6rem;
+  font-weight: 500;
+  color: #cf711f;
+  text-transform: uppercase;
+  margin-bottom: 1.6rem;
+  letter-spacing: 0.75px;
+}
 
-/* button components */
 .btn,
 .btn:link,
-.btn:visited{
-    display: inline-block;
-    
-    text-decoration: none;
-    font-size: 2rem;
-    font-weight: 600;
-    padding: 1.6rem 3.2rem;
-    border-radius: 9px;
+.btn:visited {
+  display: inline-block;
 
-    transition: background-color .3s;
+  text-decoration: none;
+  font-size: 2rem;
+  font-weight: 600;
+  padding: 1.6rem 3.2rem;
+  border-radius: 9px;
+
+  /* Only necessary for .btn */
+  border: none;
+  cursor: pointer;
+  font-family: inherit;
+
+  /* Put transition on original "state" */
+  /* transition: background-color 0.3s; */
+  transition: all 0.3s;
 }
-.btn-right-sm{
-    margin-right: 1.6rem !important;
-}
+
 .btn--full:link,
-.btn--full:visited{
-    color: #fff;
-    background-color: #e67e22;
-    font-weight: 700;
-   
-   
-}
-
-.btn--outline:link,
-.btn--outline:visited{
-    background-color: #fff;
-    color: #555;
-   
+.btn--full:visited {
+  background-color: #e67e22;
+  color: #fff;
 }
 
 .btn--full:hover,
-.btn--full:active{
-    background-color: #b8651b;
+.btn--full:active {
+  background-color: #cf711f;
+}
+
+.btn--outline:link,
+.btn--outline:visited {
+  background-color: #fff;
+  color: #555;
 }
 
 .btn--outline:hover,
-.btn--outline:active{
-    background-color: #fdf2e9;
-    /* border: inset 3px solid #fff; */
+.btn--outline:active {
+  background-color: #fdf2e9;
 
-    box-shadow: inset 0 0 0 3px #fff;
+  /* border: 3px solid #fff; */
+
+  /* Trick to add border inside */
+  box-shadow: inset 0 0 0 3px #fff;
 }
 
-.btn-form{
-    border: none;
-    cursor: pointer;
-    font-family: inherit;
-    background-color: #2e1907;
-    color: #fae5d3;
-    align-self: end;
-    transition: all .3s;
+.btn--form {
+  background-color: #45260a;
+  color: #fdf2e9;
+  align-self: end;
+  padding: 1.2rem;
 }
 
-.btn-form:hover{
-    background-color: #fff;
-    color: #555;
+.btn--form:hover {
+  background-color: #fff;
+  color: #555;
 }
 
-
-strong{
-    font-weight: 600;
-}
-
-
-
-/* tag components */
-.tag{
-    display: inline-block;
-    padding: 0.4rem 0.8rem;
-    font-size: 1.2rem;
-    font-weight: 600;
-    text-transform: uppercase;
-    color: #333;
-    border-radius: 100px;
-    cursor: pointer;
-    margin-bottom: 1.2rem;
-}
-
-
-.margin-bottom-md{
-    margin-bottom: 4.8rem !important;
-}
-
-
-/* link component */
 .link:link,
-.link:visited{
-    text-decoration: none;
-    color: #e67e22;
-    border-bottom: 1px solid currentColor;
-    padding-bottom: 2px;
-
-    transition: all .3s;
+.link:visited {
+  display: inline-block;
+  color: #e67e22;
+  text-decoration: none;
+  border-bottom: 1px solid currentColor;
+  padding-bottom: 2px;
+  transition: all 0.3s;
 }
 
 .link:hover,
-.link:active{
-    color: #cf711f;
-    border-bottom: 1px solid transparent;
+.link:active {
+  color: #cf711f;
+  border-bottom: 1px solid transparent;
 }
 
-
-/* list component */
-
-.list{
-    list-style-type: none;
-    display: flex;
-    flex-direction: column;
-    gap: 1.6rem;
+.list {
+  list-style: none;
+  display: flex;
+  flex-direction: column;
+  gap: 1.6rem;
 }
 
-.list-icon{
-    color: #e67e22;
-    width: 3rem;
-    height: 3rem;
-    
+.list-item {
+  font-size: 1.8rem;
+  display: flex;
+  align-items: center;
+  gap: 1.6rem;
+  line-height: 1.2;
 }
 
-.list-item{
-    font-size: 1.8rem;
-    display: flex;
-    align-items: center;
-    gap: 1.6rem;
+.list-icon {
+  width: 3rem;
+  height: 3rem;
+  color: #e67e22;
 }
 
-
-
-
-/* text align */
-.center-text{
-    text-align: center;
+*:focus {
+  outline: none;
+  /* outline: 4px dotted #e67e22; */
+  /* outline-offset: 8px; */
+  box-shadow: 0 0 0 0.8rem rgba(230, 125, 34, 0.5);
 }
 
+/* HELPER/SETTINGS CLASSES */
+.margin-right-sm {
+  margin-right: 1.6rem !important;
+}
 
+.margin-bottom-md {
+  margin-bottom: 4.8rem !important;
+}
 
+.center-text {
+  text-align: center;
+}
+
+strong {
+  font-weight: 500;
+}
